# C-to-X86-Compiler

./: CMakeLists.txt  Makefile  README.md  commands_ref.txt  main.c  main.s
src/: asm_gen.c  ast_tree.c  ast_tree.h  compiler.c  compiler.h  lexer.c  main.c  parser.c  print_ast.c  print_ast.h  print_token_list.c  token_types.h  tree.c
